tests/integration/errors/bool_as_integer.rsg
// TEST: compile_error
// EXPECT-ERROR: type mismatch

fn main() {
    var flag: bool = true
    var x: i32 = flag + 1
}
